test/core/errors/indexed_offsets_error/zs/packed_simple_offset_array_error.zs
package packed_simple_offset_array_error;

struct PackedOffsetArrayError
{
    packed uint32 offsets[10];

offsets[@index]:
    int32 fields[10];
};
